gcc/testsuite/rust/rustc/ui/parser/issue-14303-trait.rs
trait Foo<'a, T, 'b> {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

